--- a/Calculator/style.css
+++ b/Calculator/style.css
@@ -6,11 +6,11 @@ body{
 .calculat {
     padding: 10px;
     border-radius: 1em;
-    height: 380px;
-    width: 250px;
+    height: 450px;
+    width: 350px;
     margin: auto;
-    background-color: rgba(0, 255, 242, 0.295);
-    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    background-color: rgba(67, 154, 149, 0.295);
+    box-shadow: rgba(0, 0, 0, 0.19) 0 20px 10px, rgba(0, 0, 0, 0.23) 0 10px 20px;
     margin-top: 120px;
 }
 
@@ -23,13 +23,14 @@ body{
     border-radius: 5px;
     font-size: 20px;
     width: 100%;
-    height: 65%;
+    height: 50px;
 }
 #clear{
     background-color: #ff0404f3;
     /* color: black; */
     border: none;
     outline:  none;
+    height: 40px;
     font-weight: bolder;
 }
 input[type=button] {
@@ -39,7 +40,7 @@ input[type=button] {
     border: solid black 0.5px;
     width: 100%;
     border-radius: 5px;
-    height: 70%;
+    height: 35px;
     outline: none;
 }
 #success {
@@ -47,6 +48,9 @@ input[type=button] {
     border: none;
     outline:  none;
     font-weight: bolder;
+    height: 40px;
+    margin-bottom: -60px;
+
 }
 .cls{
     width: 100%;
